--- a/.gitignore
+++ b/.gitignore
@@ -24,12 +24,19 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# env files
 .env*.local
+env.local
 .env
+env
 .env.development
+env.development
 .env.test
+env.test
 .env.production
+env.production
+.env.local
+env.local
 
 # vercel
 .vercel
